--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport" />
   <meta name="keywords" content="heyui,hey,ui,vue,es6" />
-  <meta name="description" itemprop="description" content="HeyUI Admin管理平台" />
+  <meta name="description" itemprop="description" content="Cooky Cloud管理平台" />
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Expires" content="0" />
   <link rel="shortcut icon" type="image/x-icon" href="./src/images/logo.ico">
-  <title>HeyUI Admin管理平台</title>
+  <title>Cooky Cloud管理平台</title>
 </head>
 <body>
   <div id="app">
@@ -27,7 +27,7 @@ if(window.location.hostname == 'admin.heyui.top'){
   (function() {
     var hm = document.createElement("script");
     hm.src = "https://hm.baidu.com/hm.js?dc337e576ecea81b5da68a42b8e7f75a";
-    var s = document.getElementsByTagName("script")[0]; 
+    var s = document.getElementsByTagName("script")[0];
     s.parentNode.insertBefore(hm, s);
   })();
 }
